se realizo la base del proyecto, ya se envia email

--- a/views/simulaciones/paypal/paypal.html
+++ b/views/simulaciones/paypal/paypal.html
@@ -104,9 +104,13 @@
       />
       <input type="text" placeholder="Correo electrónico o número de celular" />
       <a href="#" class="link">¿Olvidaste tu correo electrónico?</a>
-      <button>Siguiente</button>
+      <a href="http://localhost:3000/simulaciones/afterComiste.html"
+        ><button>Siguiente</button></a
+      >
       <hr />
-      <button class="secondary-button">Abrir cuenta</button>
+      <a href="http://localhost:3000/simulaciones/afterComiste.html"
+        ><button class="secondary-button">Abrir cuenta</button></a
+      >
       <div class="language-selector">
         <select>
           <option value="es">Español</option>
