se agrego login de brou

--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,6 @@
   <body>
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Simphishing Logo" />
         <h2>SIMPHISHING</h2>
       </div>
       <nav>
@@ -93,8 +92,9 @@
         Regístrate para entrenar tus habilidades de pensamiento crítico frente a
         correos maliciosos.
       </p>
-      <a href="/registro/registro.html" class="btn">DESCÚBRELO</a>
-      <img src="email-hook.png" alt="Phishing illustration" />
+      <a href="/registro/registro.html" class="btn" style="margin-top: 50px"
+        >DESCÚBRELO</a
+      >
     </section>
   </body>
 </html>
