--- a/views/simulaciones/paypal/paypal.html
+++ b/views/simulaciones/paypal/paypal.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Paypal</title>
+    <link
+      href="https://www.paypalobjects.com/webstatic/icon/pp258.png"
+      rel="icon"
+    />
     <style>
       * {
         margin: 0;
