--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -26,7 +26,6 @@
         <thead>
           <tr>
             <th>Asunto</th>
-            <th>Mensaje</th>
             <th>Acciones</th>
           </tr>
         </thead>
@@ -48,7 +47,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="addModalLabel">
-              Agregar/Editar Correo
+              Agregar correo
             </h5>
             <button
               type="button"
@@ -85,7 +84,7 @@
                 >
                   Cancelar
                 </button>
-                <button type="submit" class="btn btn-success">Guardar</button>
+                <button type="submit" class="btn btn-success">Agregar</button>
               </div>
             </form>
           </div>
@@ -94,6 +93,7 @@
     </div>
 
     <!-- Modal para Ver Detalle -->
+     <!--
     <div
       class="modal fade"
       id="detailModal"
@@ -131,6 +131,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- Modal de Enviar Correo -->
     <div
@@ -143,7 +144,7 @@
       <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="sendModalLabel">Enviar Correo</h5>
+            <h5 class="modal-title" id="sendModalLabel">Enviar correo</h5>
             <button
               type="button"
               class="btn-close"
