--- a/views/index.html
+++ b/views/index.html
@@ -88,13 +88,11 @@
     <section class="hero">
       <p>A TU ALCANCE</p>
       <h1>SIMULADOR DE PHISHING</h1>
-      <p>
+      <p style="margin-bottom: 50px">
         Regístrate para entrenar tus habilidades de pensamiento crítico frente a
         correos maliciosos.
       </p>
-      <a href="/registro/registro.html" class="btn" style="margin-top: 50px"
-        >DESCÚBRELO</a
-      >
+      <a href="/registro/registro.html" class="btn">DESCÚBRELO</a>
     </section>
   </body>
 </html>
