--- a/views/login/login.html
+++ b/views/login/login.html
@@ -61,6 +61,7 @@
 
       .btn-custom:hover {
         background-color: #fff200;
+        color: black;
       }
 
       .error-message {
@@ -85,10 +86,10 @@
   </head>
   <body>
     <div class="login-container">
-      <h2 class="mb-4">Iniciar Sesión</h2>
+      <h2 class="mb-4">Iniciar sesión</h2>
       <form id="login-form">
         <div class="mb-3">
-          <label for="email" class="form-label">Correo Electrónico</label>
+          <label for="email" class="form-label">Correo electrónico</label>
           <input
             type="email"
             class="form-control"
