--- a/views/registro/registro.html
+++ b/views/registro/registro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro de Usuario</title>
+    <title>Registro de usuario</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -61,6 +61,7 @@
 
       .btn-custom:hover {
         background-color: #fff200;
+        color: black;
       }
 
       .error-message {
@@ -85,7 +86,7 @@
   </head>
   <body>
     <div class="register-container">
-      <h2 class="mb-4">Registro de Usuario</h2>
+      <h2 class="mb-4">Registro de usuario</h2>
       <form id="register-form">
         <div class="mb-3">
           <label for="nombre" class="form-label">Nombre</label>
@@ -108,7 +109,7 @@
           />
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Correo Electrónico</label>
+          <label for="email" class="form-label">Correo electrónico</label>
           <input
             type="email"
             class="form-control"
